--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,5 +4,6 @@
             "path": "C:\\Program Files\\Git\\bin\\bash.exe"
         }
     },
-    "terminal.integrated.defaultProfile.windows": "Git Bash"
+    "terminal.integrated.defaultProfile.windows": "Git Bash",
+    "python.REPL.enableREPLSmartSend": false
 }
